--- a/views/home.html
+++ b/views/home.html
@@ -4,28 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://kit.fontawesome.com/4481539b02.js" crossorigin="anonymous"></script>
     <title>Mercado Liebre | Inicio</title>
 </head>
 
 <body>
     <header>
         <img src="/images/logo-mercado-liebre.svg" alt="">
-        <div>Lugar para poner la barra de búsqueda</div>
-        <p>Comprá en cuotas y sin tarjeta de crédito</p>
+        <div class="search">
+            <input type="text" placeholder="Buscar productos, marcas ">
+        </div>
+        <button><i class="fas fa-search"></i></button>
+        <p class="primer"><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
 
         <nav>
-            <ul>
+            <ul class="menu1">
                 <li><a href="">Ofertas</a></li>
                 <li><a href="">Tiendas Oficiales</a></li>
                 <li><a href="">Vender</a></li>
                 <li><a href="">Ayuda</a></li>
             </ul>
-            <ul>
-                <li><a href="">Creá tu cuenta</a></li>
-                <li><a href="">Ingresá</a></li>
-                <li><a href="">Mis Compras</a></li>
+            <ul class="menu2">
+                <li><a href="">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+                <li><a href="">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
+        <div>
+            <button><i class="fa-solid fa-bars"></i></button>
+        </div>
     </header>
 
     <main>
@@ -33,29 +41,29 @@
             <h3>Basado en tu última visita</h3>
             <article>
                 <img src="/images/img-cafetera-moulinex.jpg" alt="">
-                <p>$6.770</p>
-                <p>40% OFF</p>
+                <p class="precio">$6.770</p>
+                <p class="descuento">40% OFF</p>
                 <h4>Cafetera Moulinex</h4>
             </article> 
 
             <article>  
                 <img src="/images/img-macbook-pro-2019.jpg" alt="">
-                <p>$230.000</p>
-                <p>20% off</p>
+                <p class="precio">$230.000</p>
+                <p class="descuento">20% off</p>
                 <h4>MacBook Pro 2019</h4>    
             </article>   
             
             <article> 
                 <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
-                <p>$70.500</p>
-                <p>10% off</p>
+                <p class="precio">$70.500</p>
+                <p class="descuento">10% off</p>
                 <h4>Samsung Galaxy S10</h4>
             </article>   
 
             <article>
                 <img src="/images/img-tv-samsung-smart.jpg" alt="">
-                <p>$23.200</p>
-                <p>5% off</p>
+                <p class="precio">$23.200</p>
+                <p class="descuento">5% off</p>
                 <h4>SmartTv Samsung 43"</h4>
             </article>
         </section>
@@ -64,29 +72,29 @@
             <h3>Sección de Ofertas</h3>
             <article>
                 <img src="/images/img-cafetera-moulinex.jpg" alt="">
-                <p>$6.770</p>
-                <p>40% OFF</p>
+                <p class="precio">$6.770</p>
+                <p class="descuento">40% OFF</p>
                 <h4>Cafetera Moulinex</h4>
             </article> 
 
             <article>  
                 <img src="/images/img-macbook-pro-2019.jpg" alt="">
-                <p>$230.000</p>
-                <p>20% off</p>
+                <p class="precio">$230.000</p>
+                <p class="descuento">20% off</p>
                 <h4>MacBook Pro 2019</h4>    
             </article>   
             
             <article> 
                 <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
-                <p>$70.500</p>
-                <p>10% off</p>
+                <p class="precio">$70.500</p>
+                <p class="descuento">10% off</p>
                 <h4>Samsung Galaxy S10</h4>
             </article>   
 
             <article>
                 <img src="/images/img-tv-samsung-smart.jpg" alt="">
-                <p>$23.200</p>
-                <p>5% off</p>
+                <p class="precio">$23.200</p>
+                <p class="descuento">5% off</p>
                 <h4>SmartTv Samsung 43"</h4>
             </article>
         </section>
