--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
         <div class="search">
             <input type="text" placeholder="Buscar productos, marcas ">
         </div>
-        <button><i class="fas fa-search"></i></button>
+        <button class="lupa"><i class="fas fa-search"></i></button>
         <p class="primer"><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
 
         <nav>
@@ -31,8 +31,8 @@
                 <li><a href="">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
-        <div>
-            <button><i class="fa-solid fa-bars"></i></button>
+        <div class="menu">
+            <button class="menu"><i class="fa-solid fa-bars"></i></button>
         </div>
     </header>
 
