--- a/views/home.html
+++ b/views/home.html
@@ -31,8 +31,8 @@
                 <li><a href="">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
-        <div class="menu">
-            <button class="menu"><i class="fa-solid fa-bars"></i></button>
+        <div class="burger-menu">
+            <i class="fas fa-bars"></i>
         </div>
     </header>
 
