--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -1,8 +1,18 @@
 :root {
+
+    /* colores */
+
     --Amarillo: #EAC926;
     --Azul: #03264C;
     --Celeste: #1259c3;
     --GrisOscuro: #666;
     --GrisClaro: #ebebeb;
     --Verde: #39b54a;
+
+    /* tamaño fuentes */
+
+    --cuerpoTexto: 12px;
+    --titulares: 24px;
+    --precio: 18px;
+    --des: 16px;
 }
