--- a/views/home.html
+++ b/views/home.html
@@ -14,8 +14,8 @@
         <img src="/images/logo-mercado-liebre.svg" alt="">
         <div class="search">
             <input type="text" placeholder="Buscar productos, marcas ">
+            <button class="lupa"><i class="fas fa-search"></i></button>
         </div>
-        <button class="lupa"><i class="fas fa-search"></i></button>
         <p class="primer"><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
 
         <nav>
@@ -37,65 +37,91 @@
     </header>
 
     <main>
-        <section>
+        <img class="banner" src="/images/img-home-banner.jpg" alt="banner">
+        
+        <section class="ultima-visita">
             <h3>Basado en tu última visita</h3>
-            <article>
+             <article class="articulo">
                 <img src="/images/img-cafetera-moulinex.jpg" alt="">
+                <div class="articulo">
+                <i class="fa-solid fa-truck"></i>
                 <p class="precio">$6.770</p>
-                <p class="descuento">40% OFF</p>
-                <h4>Cafetera Moulinex</h4>
+                <p class="descuento">40% off</p>
+                <p class="descripcion">Cafetera Moulinex</p>
+            </div>
             </article> 
 
-            <article>  
+            <article class="articulo">  
                 <img src="/images/img-macbook-pro-2019.jpg" alt="">
+                <div class="articulo">
+                <i class="fa-solid fa-truck"></i>
                 <p class="precio">$230.000</p>
                 <p class="descuento">20% off</p>
-                <h4>MacBook Pro 2019</h4>    
+                <p class="descripcion">MacBook Pro 2019</p>
+            </div>    
             </article>   
             
-            <article> 
+            <article class="articulo"> 
                 <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
+                <div class="articulo"></div>
+                <i class="fa-solid fa-truck"></i>
                 <p class="precio">$70.500</p>
                 <p class="descuento">10% off</p>
-                <h4>Samsung Galaxy S10</h4>
+                <p class="descripcion">Samsung Galaxy S10</p>
+            </div>
             </article>   
 
-            <article>
+            <article class="articulo">
                 <img src="/images/img-tv-samsung-smart.jpg" alt="">
+                <div class="articulo"></div>
+                <i class="fa-solid fa-truck"></i>
                 <p class="precio">$23.200</p>
                 <p class="descuento">5% off</p>
-                <h4>SmartTv Samsung 43"</h4>
+                <p class="descripcion">SmartTv Samsung 43"</p>
+            </div>
             </article>
         </section>
 
-        <section>
+        <section class="ofertas">
             <h3>Sección de Ofertas</h3>
-            <article>
+            <article class="articulo">
                 <img src="/images/img-cafetera-moulinex.jpg" alt="">
+                <div class="articulo">
+                <i class="fa-solid fa-truck"></i>
                 <p class="precio">$6.770</p>
-                <p class="descuento">40% OFF</p>
-                <h4>Cafetera Moulinex</h4>
+                <p class="descuento">40% off</p>
+                <p class="descripcion">Cafetera Moulinex</p>
+            </div>
             </article> 
 
-            <article>  
+            <article class="articulo">  
                 <img src="/images/img-macbook-pro-2019.jpg" alt="">
+                <div class="articulo">
+                <i class="fa-solid fa-truck"></i>
                 <p class="precio">$230.000</p>
                 <p class="descuento">20% off</p>
-                <h4>MacBook Pro 2019</h4>    
+                <p class="descripcion">MacBook Pro 2019</p>
+            </div>    
             </article>   
             
-            <article> 
+            <article class="articulo"> 
                 <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
+                <div class="articulo"></div>
+                <i class="fa-solid fa-truck"></i>
                 <p class="precio">$70.500</p>
                 <p class="descuento">10% off</p>
-                <h4>Samsung Galaxy S10</h4>
+                <p class="descripcion">Samsung Galaxy S10</p>
+            </div>
             </article>   
 
-            <article>
+            <article class="articulo">
                 <img src="/images/img-tv-samsung-smart.jpg" alt="">
+                <div class="articulo"></div>
+                <i class="fa-solid fa-truck"></i>
                 <p class="precio">$23.200</p>
                 <p class="descuento">5% off</p>
-                <h4>SmartTv Samsung 43"</h4>
+                <p class="descripcion">SmartTv Samsung 43"</p>
+            </div>
             </article>
         </section>
     </main>
