--- a/views/home.html
+++ b/views/home.html
@@ -31,8 +31,10 @@
                 <li><a href="">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
-        <div class="burger-menu">
-            <i class="fas fa-bars"></i>
+        <div class="burger">
+            <div class="burger-menu">
+                <i class="fas fa-bars"></i>
+            </div>
         </div>
     </header>
 
@@ -43,42 +45,46 @@
             <h3>Basado en tu última visita</h3>
              <article class="articulo">
                 <img src="/images/img-cafetera-moulinex.jpg" alt="">
-                <div class="articulo">
-                <i class="fa-solid fa-truck"></i>
-                <p class="precio">$6.770</p>
-                <p class="descuento">40% off</p>
-                <p class="descripcion">Cafetera Moulinex</p>
-            </div>
+                <div class="detalle">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$6.770</p>
+                    <p class="descuento">40% off</p>
+                    <br>
+                    <p class="descripcion">Cafetera Moulinex</p>
+                </div>
             </article> 
 
             <article class="articulo">  
                 <img src="/images/img-macbook-pro-2019.jpg" alt="">
-                <div class="articulo">
-                <i class="fa-solid fa-truck"></i>
-                <p class="precio">$230.000</p>
-                <p class="descuento">20% off</p>
-                <p class="descripcion">MacBook Pro 2019</p>
-            </div>    
+                <div class="detalle">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$230.000</p>
+                    <p class="descuento">20% off</p>
+                    <br>
+                    <p class="descripcion">MacBook Pro 2019</p>
+                </div>    
             </article>   
             
             <article class="articulo"> 
                 <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
-                <div class="articulo"></div>
-                <i class="fa-solid fa-truck"></i>
-                <p class="precio">$70.500</p>
-                <p class="descuento">10% off</p>
-                <p class="descripcion">Samsung Galaxy S10</p>
-            </div>
+                <div class="detalle">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$70.500</p>
+                    <p class="descuento">10% off</p>
+                    <br>
+                    <p class="descripcion">Samsung Galaxy S10</p>
+                </div>
             </article>   
 
             <article class="articulo">
                 <img src="/images/img-tv-samsung-smart.jpg" alt="">
-                <div class="articulo"></div>
-                <i class="fa-solid fa-truck"></i>
-                <p class="precio">$23.200</p>
-                <p class="descuento">5% off</p>
-                <p class="descripcion">SmartTv Samsung 43"</p>
-            </div>
+                <div class="detalle">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$23.200</p>
+                    <p class="descuento">5% off</p>
+                    <br>
+                    <p class="descripcion">SmartTv Samsung 43"</p>
+                </div>
             </article>
         </section>
 
@@ -86,42 +92,46 @@
             <h3>Sección de Ofertas</h3>
             <article class="articulo">
                 <img src="/images/img-cafetera-moulinex.jpg" alt="">
-                <div class="articulo">
-                <i class="fa-solid fa-truck"></i>
-                <p class="precio">$6.770</p>
-                <p class="descuento">40% off</p>
-                <p class="descripcion">Cafetera Moulinex</p>
-            </div>
+                <div class="detalle">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$6.770</p>
+                    <p class="descuento">40% off</p>
+                    <br>
+                    <p class="descripcion">Cafetera Moulinex</p>
+                </div>
             </article> 
 
             <article class="articulo">  
                 <img src="/images/img-macbook-pro-2019.jpg" alt="">
-                <div class="articulo">
-                <i class="fa-solid fa-truck"></i>
-                <p class="precio">$230.000</p>
-                <p class="descuento">20% off</p>
-                <p class="descripcion">MacBook Pro 2019</p>
-            </div>    
+                <div class="detalle">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$230.000</p>
+                    <p class="descuento">20% off</p>
+                    <br>
+                    <p class="descripcion">MacBook Pro 2019</p>
+                </div>    
             </article>   
             
             <article class="articulo"> 
                 <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
-                <div class="articulo"></div>
-                <i class="fa-solid fa-truck"></i>
-                <p class="precio">$70.500</p>
-                <p class="descuento">10% off</p>
-                <p class="descripcion">Samsung Galaxy S10</p>
-            </div>
+                <div class="detalle">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$70.500</p>
+                    <p class="descuento">10% off</p>
+                    <br>
+                    <p class="descripcion">Samsung Galaxy S10</p>
+                </div>
             </article>   
 
             <article class="articulo">
                 <img src="/images/img-tv-samsung-smart.jpg" alt="">
-                <div class="articulo"></div>
-                <i class="fa-solid fa-truck"></i>
-                <p class="precio">$23.200</p>
-                <p class="descuento">5% off</p>
-                <p class="descripcion">SmartTv Samsung 43"</p>
-            </div>
+                <div class="detalle"></div>
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$23.200</p>
+                    <p class="descuento">5% off</p>
+                    <br>
+                    <p class="descripcion">SmartTv Samsung 43"</p>
+                </div>
             </article>
         </section>
     </main>
