--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,3 +1,8 @@
+.footer {
+    background-color: white;
+    padding-top: 20px;
+}
+
 footer section {
     text-align: center;
     margin: 30px 30px;
@@ -12,4 +17,12 @@ footer section i {
     font-size: 2em;
     margin-bottom: 10px;
     color: var(--Celeste);
+}
+
+footer .copyright {
+    text-align: left;
+}
+
+footer .copyright p {
+    margin-left: 0;
 }
