--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,20 +1,11 @@
-* {
-    margin: 0;
-    padding: 0;
-}
 
 body {
     background-color: #ebebeb;
 }
 
 main {
-    margin: auto;
+    margin: 0 auto;
     width: 90%;
-}
-
-.banner {
-   width: 100%; 
-
 }
 
 h3 {
@@ -48,6 +39,7 @@ article {
 .descripcion {
     font-size: var(--des);
     color: var(--GrisOscuro);
+    display: none;
 }
 
 .articulo i {
@@ -63,16 +55,12 @@ article {
     border-top: solid 1px #ebebeb;
 }
 
-/* smartphone */
-
-@media (max-width:425px) {
-
-    .descripcion {
-        display: none;
-    }
+.banner {
+    display: none;
 }
 
-/* tablet-Desktop */
+   
+/* tablet */
 
 @media (min-width:425px) {
     
@@ -80,5 +68,16 @@ article {
         box-shadow: 0px 0px 10px rgb(100, 100, 100);   
     }
 
+    .banner {
+        display: block;
+    }
+
+}
+
+/* Desktop */
+
+@media (min-width:769px) {
+    
+    
 
 }
