--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('/css/variables.css');
+@import url('/css/general.css');
 @import url('/css/header.css');
 @import url('/css/home.css');
 @import url('/css/footer.css');
