--- a/views/home.html
+++ b/views/home.html
@@ -31,15 +31,16 @@
                 <li><a href="">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
-        <div class="burger">
-            <div class="burger-menu">
-                <i class="fas fa-bars"></i>
-            </div>
+         <div class="burger-menu">
+            <i class="fas fa-bars"></i>
         </div>
+        
     </header>
 
     <main>
-        <img class="banner" src="/images/img-home-banner.jpg" alt="banner">
+        <div class="banner">
+            <img src="/images/img-home-banner.jpg" alt="banner" width="100%">
+        </div>
         
         <section class="ultima-visita">
             <h3>Basado en tu última visita</h3>
@@ -125,7 +126,7 @@
 
             <article class="articulo">
                 <img src="/images/img-tv-samsung-smart.jpg" alt="">
-                <div class="detalle"></div>
+                <div class="detalle">
                     <i class="fa-solid fa-truck"></i>
                     <p class="precio">$23.200</p>
                     <p class="descuento">5% off</p>
@@ -136,7 +137,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <section>
             <i class="fa-solid fa-credit-card"></i>
             <h4>Pagá con tarjeta o efectivo</h4>
@@ -158,7 +159,7 @@
                 porque estás siempre protegido.</p>
         </section>
 
-        <section>
+        <section class="copyright">
             <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>
     </footer>
