--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,4 +1,9 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box; 
+}
+
+li {
+    list-style: none;
 }
