--- a/public/css/header.css
+++ b/public/css/header.css
@@ -28,26 +28,56 @@ header {
     background-size: cover;
     width: 100%;
     padding: 20px 0;
-
 }
-header img {
-    width: 130px;
-    margin: 30px 30px;
+
+header .logo-busqueda {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+}
+
+header .logo img,
+header .search {
+    width: 50%;
+}
+
+
+
+header .logo img{
+    width: 116px;
+    margin: 10px 10px;
     margin-bottom: 10px;
     
-
 }
+
 
 /* header-div */
 
 button.lupa {
     margin: 1px;
+    top: -1px;
+    left: -20px;
+    position: relative;
+    background: white;
+    border: none;
 }
 
 div.search {
-    margin-left: 20px;
-
+    margin-left: 2px;
+    display: flex;
+    align-items: center;
 }
+
+.search input {
+    height: 25px;
+    padding: 15px;
+    width: 90%;
+    font-size: 14px;
+    border: none;
+    border-radius: 10px;
+}
+
 
 p.primer {
     text-align: center;
@@ -83,7 +113,7 @@ ul.menu2 {
     border-radius: 5px;
     margin: 0 auto;
     text-align: center;
-    width: 25px;
+    width: 40px;
 }
 
 div.burger-menu i {
@@ -93,18 +123,74 @@ div.burger-menu i {
 
 /* tablet */
 
-@media (min-width: 425px) {
+@media (min-width: 426px) {
+
+    header {
+        background-color: var(--Amarillo);
+        background-size: cover;
+        width: 100%;
+        padding: 20px 0;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    header .logo-busqueda {
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+        align-items: center;
+        width: 50%;
+    }
+
+    p.primer {
+        text-align: center;
+        margin: 10px 30px;
+        font-size: 12px;
+    }
+
+    .search input {
+        height: 21px;
+        font-size: 14px;
+        border: none;
+        border-radius: 10px;
+        width: 200px;
+    }
+
+    .lista {
+        display: flex;
+        width: 100%;
+        margin: 0px 20px;
+    }
 
     .burger-menu {
         display: none;
     }
 
     ul.menu1 {
-        display:block;
+        display:inherit;
+        width: 50%;
     }
     
     ul.menu2 {
-        display: block;
+        display: inherit;
+        width: 50%;
+        justify-content: flex-end;
+        
+    }
+
+    header .logo img{
+        width: 80%;
+        margin: 10px 10px;
+        margin-bottom: 10px;
+        
+    }
+
+    .menu1 li,
+    .menu2 li {
+        margin-right: 20px;
     }
 
 }
