--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -5,7 +5,7 @@
 
 footer section {
     text-align: center;
-    margin: 30px 30px;
+    margin: 30px 30px 0;
 }
 
 footer section p {
@@ -24,5 +24,5 @@ footer .copyright {
 }
 
 footer .copyright p {
-    margin-left: 0;
+    padding-bottom: 10px;
 }
