--- a/views/home.html
+++ b/views/home.html
@@ -31,8 +31,8 @@
                 <li><a href="">Ayuda</a></li>
             </ul>
             <ul class="menu2">
-                <li><a href="">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
-                <li><a href="">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="/register">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+                <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
@@ -42,7 +42,7 @@
 
     </header>
 
-    <main>
+    <main class="main__home">
         <div class="banner">
             <img src="/images/img-home-banner.jpg" alt="banner" width="100%">
         </div>
