--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,11 +1,12 @@
 .footer {
     background-color: white;
     padding-top: 20px;
+    display: flex;
 }
 
 footer section {
     text-align: center;
-    margin: 30px 30px 0;
+    margin: 30px 30px 30px;
 }
 
 footer section p {
@@ -17,6 +18,11 @@ footer section i {
     font-size: 2em;
     margin-bottom: 10px;
     color: var(--Celeste);
+}
+
+footer section i:hover {
+    color:var(--Amarillo);
+    transition: 1s;
 }
 
 footer .copyright {
