--- a/public/css/register.css
+++ b/public/css/register.css
@@ -64,7 +64,11 @@
     border-radius: 5px;
     padding: 5px 10px;
     color: white;
+    
+}
 
+.boton-formulario:hover {
+    background-color: #0022AA;
 }
 
 a {
